configuraçao de degrade

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Montserrat', sans-serif;
+}
+
 header {
 	background: #BBBBBB;
 	padding: 20px 0;
@@ -147,4 +151,60 @@ thead {
 td, th {
 	border: 1px solid #000000;
 	padding: 8px 15px;
+}
+.banner {
+	width: 100%;
+}
+.titulo-principal {
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;
+}
+.principal p {
+	margin: 0 0 1em;
+}
+.principal strong {
+	font-weight: bold;
+}
+.principal em {
+	font-style: italic;
+}
+.beneficios{
+	padding: 3em 0;
+}
+.mapa {
+	padding: 3em 0;
+}
+.mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+.conteudobeneficios {
+	width: 640px;
+	margin: 0 auto;
+}
+.listabeneficios {
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+.itens {
+	line-height: 1.5;
+}
+.itens:nth-child(2n) {
+	font-weight: bold;
+}
+.imagembeneficios {
+	width: 60%;
+}
+.utensilios {
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0;
+}
+
+.VIDEO {
+	width: 560px;
+	margin: 2em auto;
 }
